[package]
name = "imgui-opengl"
description = "An OpenGL renderer for imgui-rs"
version = "0.1.0"
authors = ["Michael Fairley <michael@michaelfairley.com>, Jakobzs <31919330+Jakobzs@users.noreply.github.com>"]
build = "build.rs"
homepage = "https://github.com/jakobzs/rust-imgui-opengl-renderer"
repository = "https://github.com/jakobzs/rust-imgui-opengl-renderer"
readme = "README.md"
categories = ["gui", "rendering::graphics-api"]
license = "MIT/Apache-2.0"

[dependencies]
imgui = "0.9.0"

[build-dependencies]
gl_generator = "0.14.0"
